name:                redis-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Redis-like server in Haskell. Implements Redis protocol.
homepage:            http://github.com/nicolasbrugneaux/redis-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Brugneaux
maintainer:          nicolas.brugneaux@gmail.com
copyright:           2015 Nicolas Brugneaux
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable redis-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, stm, network, containers, mtl, transformers,
                       attoparsec, bytestring
  Ghc-Options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
